# libmanager

./: .gitignore  Cargo.toml  flake.nix
examples/: wip.rs
src/: download.rs  game.rs  lib.rs
